# oGL-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile  glad.c  glad.h  main.cpp  program.out
Archive/: main-2023-01-12.cpp  main-2023-01-13.cpp
build-old/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
build-old/.cmake/api/v1/reply/: cache-v2-ede2211540a84252e646.json  cmakeFiles-v1-9a9af48bc71dc2bc78b3.json  codemodel-v2-0f5d21280e5dfc1f254a.json  index-2023-07-07T00-24-30-0277.json  target-oGL-Debug-fe88154070dadf5fb235.json
build-old/Testing/: TAG
build-old/Testing/20230706-2326/: Test.xml
build-old/Testing/20230707-0001/: Test.xml
headers/: Camera.h  Object.h
headers/render/: ModelLoader.h  Vertex.h
include/: Camera.h  Logger.h  Object.h  ShaderProgram.h
include/debugGame/: DebugScene.h
include/engine/: Light.h  LightDebugObject.h  Scene.h
include/glm/: main.cpp
include/render/: Mesh.h  Vertex.h
models/: ModelLoader.cpp
shaders/: ShaderProgram.cpp
src/: CMakeLists.txt  main.cpp
src/assets/: Skull.mtl  Test.mtl
src/assets/shaders/: fragmentShader.fs  glowShader.fs  vertexShader.vs
src/debugGame/: DebugScene.cpp
src/engine/: LightDebugObject.cpp  Scene.cpp
src/models/: ModelLoader.cpp
src/render/: Camera.cpp  Mesh.cpp  Object.cpp
src/shaders/: ShaderProgram.cpp
src/tools/: Logger.cpp
